Bug 505820 - New folder window sometimes too big
Summary: New folder window sometimes too big
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.15.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-20 05:21 UTC by Greeniac
Modified: 2025-07-04 13:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
How it looks like when it's "too big" (67.11 KB, image/png)
2025-06-20 05:21 UTC, Greeniac
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Greeniac 2025-06-20 05:21:50 UTC
Created attachment 182408 [details]
How it looks like when it's "too big"

SUMMARY
In the new 6.4 update, the new folder window now has an option to change the folder's color, and clicking the option makes the window bigger, but sometimes when quitting this window without creating a folder, the next time you open that window it will be the same size as it would be with the color changing drop out extended, without having it actually extended, so there will be a lot of empty space and it doesn't look good.

STEPS TO REPRODUCE
1. Click the new folder option to open the window.
2. Extend the "Choose custom color or icon" drop out.
3. Quit the window without creating a folder.
4. Click the new folder option to open the window again.

OBSERVED RESULT
Sometimes it would be too big.

EXPECTED RESULT
It should be sized correctly

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.14.11-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-7600K CPU @ 3.80GHz
Memory: 24 GiB of RAM (23.4 GiB usable)
Graphics Processor: AMD Radeon Pro 580X
Manufacturer: Apple Inc.
Product Name: iMac18,3
System Version: 1.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-06-20 14:49:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/312
Comment 2 Nicolas Fella 2025-07-04 13:28:16 UTC
Git commit 52275f7bf8ded60f3089d27caa73a33349241710 by Nicolas Fella, on behalf of Harald Sitter.
Committed on 04/07/2025 at 12:24.
Pushed by nicolasfella into branch 'master'.

kcollapsiblegroupbox: don't blow up initial window size

it would cause unnecessary expansion of the layout initially, if we
don't get switched into expanded mode right away. this also effectively
resolves a state desync where isExpanded==false but the fixedheight is
not that of the header right after construction

M  +3    -0    src/kcollapsiblegroupbox.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/52275f7bf8ded60f3089d27caa73a33349241710