kcollapsiblegroupbox: don't blow up initial window size

it would cause unnecessary expansion of the layout initially, if we
don't get switched into expanded mode right away. this also effectively
resolves a state desync where isExpanded==false but the fixedheight is
not that of the header right after construction

BUG: 505820